--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="left-image">
-                <a href="assets/images/projetos-1.jpg" target="_blank"> <img src="assets/images/projetos-1.jpg"
+                <a href="assets/images/projetos-1.jpg" data-lightbox="image-1" data-title="Primeira Página"> <img src="assets/images/projetos-1.jpg"
                     alt="" /> </a>
               </div>
             </div>
@@ -124,7 +124,7 @@
               <h4>Java Script</h4>
               <p>
                 Ainda tenho muito a aprender, porém, consigo utilizar de Arrays, Objetos,
-                HOFs, testes unitários com Jest, não utilizo let, e sigo aprendendo cada dia.
+                HOFs, testes unitários com Jest, não utilizo var, e sigo aprendendo cada dia.
               </p>
             </div>
           </div>
@@ -225,7 +225,7 @@
                 <figure class="snip1321">
                   <img src="assets/images/construction.png" alt="sq-sample26" />
                   <figcaption>
-                    <a href="assets/images/construction.png" data-lightbox="image-1" data-title="Caption"><i
+                    <a href="assets/images/construction.png" target="_blank"><i
                         class="fa fa-search"></i></a>
                     <h4>Projeto 5</h4>
                     <span>em construçãos</span>
@@ -237,7 +237,7 @@
                 <figure class="snip1321">
                   <img src="assets/images/construction.png" alt="sq-sample26" />
                   <figcaption>
-                    <a href="assets/images/construction.png" data-lightbox="image-1" data-title="Caption"><i
+                    <a href="assets/images/construction.png" target="_blank"><i
                         class="fa fa-search"></i></a>
                     <h4>Projeto 6</h4>
                     <span>em construção</span>
