Projeto Solar System

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <li><a href="#section1">Sobre mim</a></li>
               <li><a href="#section2">Habilidades</a></li>
               <li><a href="#section3">Alguns Projetos</a></li>
-              <li><a href="#section4">Contato</a></li>
+              <!-- <li><a href="#section4">Contato</a></li> -->
             </ul>
           </nav>
           <div class="social-network">
@@ -110,7 +110,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="service-item">
-              <div class="first-service-icon service-icon"></div>
+              <div class="third-service-icon service-icon"></div>
               <h4>HTML5 & CSS3</h4>
               <p>
                 Consigo criar sites responsivos, utilizando de frameworks e bibliotecas,
@@ -130,7 +130,7 @@
           </div>
           <div class="col-md-6">
             <div class="service-item">
-              <div class="third-service-icon service-icon"></div>
+              <div class="first-service-icon service-icon"></div>
               <h4>Pensamento Criativo</h4>
               <p>
                 "Aprenda com o ontem, viva para o hoje, esperança para o amanhã.
@@ -140,10 +140,10 @@
           </div>
           <div class="col-md-6">
             <div class="service-item">
-              <div class="fourth-service-icon service-icon"></div>
-              <h4>Foco em Resultados</h4>
+              <div class="second-service-icon service-icon"></div>
+              <h4>React</h4>
               <p>
-                Tenho metas e prioridades, e direciono meus esforços para atingi-los.
+                Utilizo, JSX, render(), import, componentes de classe, props, e PropTypes.
                 <br>&nbsp;
               </p>
             </div>
@@ -164,16 +164,17 @@
             <form class="isotope-toolbar">
               <label><input type="radio" data-type="*" checked="" name="isotope-filter" />
                 <span>all</span></label>
-              <label><input type="radio" data-type="html_filter" name="isotope-filter" />
+              <label><input type="radio" data-type=".html" name="isotope-filter" />
                 <span>HTML</span></label>
-              <label><input type="radio" data-type="css_filter" name="isotope-filter" />
+              <label><input type="radio" data-type=".css" name="isotope-filter" />
                 <span>CSS</span></label>
-              <label><input type="radio" data-type="js_filter" name="isotope-filter" />
+              <label><input type="radio" data-type=".js" name="isotope-filter" />
                 <span>JavaScript</span></label>
+              <label><input type="radio" data-type=".react" name="isotope-filter" />
+                <span>React</span></label>
             </form>
-            <div class="isotope-box">
-              <!--  Cod. utilizado no slide de fotos, owl-carousel -->
-              <div class="isotope-item" data-type="html_filter"  >
+            <div class="isotope-box">              
+              <div class="isotope-item html css">
                 <figure class="snip1321">
                   <img src="assets/images/dino-game.png" alt="sq-sample26" />
                   <figcaption>
@@ -185,7 +186,7 @@
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="js_filter">
+              <div class="isotope-item js">
                 <figure class="snip1321">
                   <img src="assets/images/js_unitytestes.png" alt="sq-sample26" />
                   <figcaption>
@@ -197,7 +198,7 @@
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="css_filter">
+              <div class="isotope-item html css">
                 <figure class="snip1321">
                   <img src="assets/images/trybewarts.png" alt="sq-sample26" />
                   <figcaption>
@@ -209,7 +210,7 @@
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="js_filter">
+              <div class="isotope-item html js">
                 <figure class="snip1321">
                   <img src="assets/images/shopping-cart.png" alt="sq-sample26" />
                   <figcaption>
@@ -221,19 +222,19 @@
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="css_filter">
+              <div class="isotope-item html css js react">
                 <figure class="snip1321">
-                  <img src="assets/images/construction.png" alt="sq-sample26" />
+                  <img src="assets/images/solarSystem.png" alt="sq-sample26" />
                   <figcaption>
-                    <a href="assets/images/construction.png" target="_blank"><i
+                    <a href="https://github.com/jeffverdan/projectSolarSystem" target="_blank"><i
                         class="fa fa-search"></i></a>
-                    <h4>Projeto 5</h4>
-                    <span>em construçãos</span>
+                    <h4>Project Solar System</h4>
+                    <span>Uma página criada com React, utilizando metodo 'render()', componentes de classe e PropTypes. </span>
                   </figcaption>
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="js_filter">
+              <div class="isotope-item">
                 <figure class="snip1321">
                   <img src="assets/images/construction.png" alt="sq-sample26" />
                   <figcaption>
