--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
             <form class="isotope-toolbar">
               <label><input type="radio" data-type="*" checked="" name="isotope-filter" />
                 <span>all</span></label>
-              <label><input type="radio" data-type=".html" name="isotope-filter" />
+              <label><input type="radio" data-type=".html_filter" name="isotope-filter" />
                 <span>HTML</span></label>
-              <label><input type="radio" data-type=".css" name="isotope-filter" />
+              <label><input type="radio" data-type=".css_filter" name="isotope-filter" />
                 <span>CSS</span></label>
-              <label><input type="radio" data-type=".js" name="isotope-filter" />
+              <label><input type="radio" data-type=".js_filter" name="isotope-filter" />
                 <span>JavaScript</span></label>
-              <label><input type="radio" data-type=".react" name="isotope-filter" />
+              <label><input type="radio" data-type=".react_filter" name="isotope-filter" />
                 <span>React</span></label>
             </form>
             <div class="isotope-box">              
-              <div class="isotope-item html css">
+              <div class="isotope-item html_filter css_filter">
                 <figure class="snip1321">
                   <img src="assets/images/dino-game.png" alt="sq-sample26" />
                   <figcaption>
@@ -186,7 +186,7 @@
                 </figure>
               </div>
 
-              <div class="isotope-item js">
+              <div class="isotope-item js_filter">
                 <figure class="snip1321">
                   <img src="assets/images/js_unitytestes.png" alt="sq-sample26" />
                   <figcaption>
@@ -198,7 +198,7 @@
                 </figure>
               </div>
 
-              <div class="isotope-item html css">
+              <div class="isotope-item html_filter css_filter">
                 <figure class="snip1321">
                   <img src="assets/images/trybewarts.png" alt="sq-sample26" />
                   <figcaption>
@@ -210,7 +210,7 @@
                 </figure>
               </div>
 
-              <div class="isotope-item html js">
+              <div class="isotope-item html_filter js_filter">
                 <figure class="snip1321">
                   <img src="assets/images/shopping-cart.png" alt="sq-sample26" />
                   <figcaption>
@@ -222,7 +222,7 @@
                 </figure>
               </div>
 
-              <div class="isotope-item html css js react">
+              <div class="isotope-item html_filter css_filter js_filter react_filter">
                 <figure class="snip1321">
                   <img src="assets/images/solarSystem.png" alt="sq-sample26" />
                   <figcaption>
