Atualizando Projeto React

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <figure class="snip1321">
                   <img src="assets/images/solarSystem.png" alt="sq-sample26" />
                   <figcaption>
-                    <a href="https://github.com/jeffverdan/projectSolarSystem" target="_blank"><i
+                    <a href="https://jeffverdan.github.io/projectSolarSystem-site/" target="_blank"><i
                         class="fa fa-search"></i></a>
                     <h4>Project Solar System</h4>
                     <span>Uma página criada com React, utilizando metodo 'render()', componentes de classe e PropTypes. </span>
